--- a/index.html
+++ b/index.html
@@ -9,22 +9,17 @@
 <body>
   <h1>Calculadora de Tasa Metabólica Basal y Sistema Mexicano de Equivalentes</h1>
   <form id="bmr-form">
-    <label for="age">Edad:</label>
-    <input type="number" id="age" name="age" min="1" required>
-    <br>
-    <label for="height">Altura (cm):</label>
-    <input type="number" id="height" name="height" min="1" required>
-    <br>
-    <label for="weight">Peso (kg):</label>
-    <input type="number" id="weight" name="weight" min="1" required>
-    <br>
-    <label for="gender">Género:</label>
-    <select id="gender" name="gender" required>
-      <option value="male">Masculino</option>
-      <option value="female">Femenino</option>
+    ...
+    <label for="activity-level">Nivel de actividad:</label>
+    <select id="activity-level" name="activity-level" required>
+      <option value="1.2">Sedentario (poco o ningún ejercicio)</option>
+      <option value="1.375">Ligeramente activo (ejercicio ligero o deportes 1-3 días a la semana)</option>
+      <option value="1.55">Moderadamente activo (ejercicio moderado o deportes 3-5 días a la semana)</option>
+      <option value="1.725">Muy activo (ejercicio intenso o deportes 6-7 días a la semana)</option>
+      <option value="1.9">Extra activo (ejercicio muy intenso, trabajo físico o entrenamiento dos veces al día)</option>
     </select>
     <br>
-    <button type="submit">Calcular</button>
+    <input type="submit" value="Calcular">
   </form>
   <div id="result"></div>
   <script src="script.js"></script>
