--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 <body>
   <h1>Calculadora de Tasa Metabólica Basal y Sistema Mexicano de Equivalentes</h1>
   <form id="bmr-form">
-    ...
+    <label for="age">Edad:</label>
+    <input type="number" id="age" name="age" min="1" required>
+    <br>
+    <label for="height">Altura (cm):</label>
+    <input type="number" id="height" name="height" min="1" required>
+    <br>
+    <label for="weight">Peso (kg):</label>
+    <input type="number" id="weight" name="weight" min="1" required>
+    <br>
+    <label for="gender">Género:</label>
+    <select id="gender" name="gender" required>
+      <option value="male">Masculino</option>
+      <option value="female">Femenino</option>
+    </select>
     <label for="activity-level">Nivel de actividad:</label>
     <select id="activity-level" name="activity-level" required>
       <option value="1.2">Sedentario (poco o ningún ejercicio)</option>
