There was a change of input instead of button and no longer showed the lue button. Fixed, hopefully.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <option value="1.9">Extra activo (ejercicio muy intenso, trabajo físico o entrenamiento dos veces al día)</option>
     </select>
     <br>
-    <input type="submit" value="Calcular">
+    <button type="submit">Calcular</button>
   </form>
   <div id="result"></div>
   <script src="script.js"></script>
