--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Calculadora de Tasa Metabólica Basal y Sistema Mexicano de Equivalentes</h1>
+    <h1>Calculadora de Tasa Metabólica Basal y Sistema Mexicano de Equivalentes V03</h1>
     <form id="bmr-form">
     <label for="age">Edad:</label>
     <input type="number" id="age" name="age" min="1" required>
