--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculadora de TDEE y SME V01</title>
+  <title>Calculadora de TDEE y SME</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <h1>Calculadora de TDEE y Recomendaciones del SME</h1>
+  <h1>Calculadora de TDEE y Recomendaciones del SME V01</h1>
   <form id="bmr-form">
     <label for="age">Edad (años):</label>
     <input type="number" id="age" min="1" max="120" step="1" required>
