Sleeker slider, now spans side to side.

--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
         <div class="circle" id="circle"></div>
       </div>
       <div class="labels">
-        <span id="essential-fat" class="label" style="left: 1%;">Essential fat</span>
-        <span id="athlete" class="label" style="left: calc(24% - 27px);">Athlete</span>
-        <span id="in-shape" class="label" style="left: calc(54.5% - 35px);">In shape</span>
-        <span id="obese" class="label" style="right: 1%;">Obese</span>
-      </div> 
+        <span id="essential-fat" class="label" style="left: 1%;">Grasa escencial</span>
+        <span id="athlete" class="label" style="left: calc(24% - 27px);">Atelta</span>
+        <span id="in-shape" class="label" style="left: calc(54.5% - 35px);">En forma</span>
+        <span id="obese" class="label" style="right: 1%;">Obesidad</span>
+      </div>
+    </div> 
     <script src="script.js"></script>
   </body>
 </html>
