Fixing body fat slider labels

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="circle" id="circle"></div>
       </div>
       <div class="labels">
-        <span id="essential-fat" class="label" style="left: 1%;">Grasa escencial</span>
+        <span id="essential-fat" class="label" style="left: 1%;">G.E.</span>
         <span id="athlete" class="label" style="left: calc(24% - 27px);">Atelta</span>
         <span id="in-shape" class="label" style="left: calc(54.5% - 35px);">En forma</span>
         <span id="obese" class="label" style="right: 1%;">Obesidad</span>
