--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <h1>Calculadora de TDEE y Recomendaciones del SME V01</h1>
+  <!--Form to enter your basic measurements, gender, and activity level-->
   <form id="bmr-form">
     <label for="age">Edad (años):</label>
     <input type="number" id="age" min="1" max="120" step="1" required>
@@ -58,6 +59,7 @@
 
     </form>
     <div id="result"></div>
+    <!--Slider container and it's labels-->
     <div class="container">
       <div class="slider">
         <div class="circle" id="circle"></div>
