More font matching

--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora de TDEE y SME</title>
   <link rel="stylesheet" href="styles.css">
-  <!--Google fonts alternative to Avenir Light used in Wix.-->
+  <!--Adding apis to use Google fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!--Google fonts alternative to Avenir Light used in Wix.-->
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap" rel="stylesheet">
+  <!--Raleway font form the h2's-->
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Raleway:wght@300&display=swap" rel="stylesheet">
+  <!--Extra light font for the buttons-->
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Calculadora de TDEE y Recomendaciones del SME V01</h1>
+  <h2>Calculadora de TDEE y Recomendaciones del SME V01</h2>
   <!--Form to enter your basic measurements, gender, and activity level-->
   <form id="bmr-form">
     <label for="age">Edad (años):</label>
